show emph markers: I don't want to hide '+'!

--- a/config.org
+++ b/config.org
@@ -277,8 +277,10 @@ Hide slashes and stars:
 
 #+begin_src emacs-lisp :tangle yes
 (after! org
-  (setq org-hide-emphasis-markers t)
+  ;; (setq org-hide-emphasis-markers t)
+  (setq org-hide-emphasis-markers nil)
   )
+
 #+end_src
 
 Add colour to italics:
