change agenda sections

--- a/config.org
+++ b/config.org
@@ -614,13 +614,14 @@ My custom agenda view:
                             (:name "Write" :and(:tag "write" :todo "ACTV"))
                             (:name "Read" :and(:tag "read" :todo "ACTV"))
                             (:name "Programming" :and(:tag "prog" :todo "ACTV"))
-                            (:name "Other tasks" :todo "ACTV")
+                            (:name "Other" :todo "ACTV")
                             (:name "Routines" :tag "routine")
                             (:name "Deadlines" :deadline t :order 2)
-                            (:name "Next: Write" :and(:tag "write" :todo "NEXT"))
-                            (:name "Next: Read" :and(:tag "read" :todo "NEXT"))
-                            (:name "Next: Programming" :and(:tag "prog" :todo "NEXT"))
-                            (:name "Next: Other tasks" :todo "NEXT")
+                            (:name "To Read" :and(:tag "read" :todo "NEXT"))
+                            (:name "To Write" :and(:tag "write" :todo "NEXT"))
+                            (:name "Programming tasks" :and(:tag "prog" :todo "NEXT"))
+                            (:name "Other tasks" :todo "NEXT")
+                            (:name "Waiting" :todo "WAIT")
                             ;; (:name "To refile" :file-path "inbox.org")
                             ;; (:name "Active projects"
                             ;;        :file-path "journal/")
